<resources>
    <string name="app_name">ITE393 Exam</string>
    <string name="l">Login</string>
    <string name="Map">Campus Map</string>
    <string name="Back">BACK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="part">Be part of our growing community!</string>
    <string name="par2">Choose PHINMA Education</string>
    <string name="part3">As an innovative Philippine business institution, PHINMA believes that access to quality education is the solution to many of our country’s problems. While the enrollment rate in the Philippines has always been high, PHINMA discovered that most students do not finish tertiary education. Students were willing to learn but did not have the resources to stay in school.</string>
    <string name="hp">Home Page</string>
    <string name="c">CITE</string>
    <string name="ca">CAHS</string>
    <string name="ce">CEA</string>
    <string name="be">BELA</string>
    <string name="jp">JPIA</string>
    <string name="tm">TM</string>
    <string name="cma">CMA</string>
    <string name="mods_1">Most importantly, our education is affordable. We do not charge any hidden or unnecessary fees.</string>
    <string name="mods_3">Check our complete list of scholarships below:</string>
    <string name="mods_2">We support deserving students throughout their tertiary learning years by offering scholarship programs. Our Hawak Kamay Scholarship Program provides 50% to 75% discount on tuition and miscellaneous fees for our more financially-challenged students.</string>
    <string name="pin_1">1. PHINMA Scholarship (formerly Presidential Scholarship)</string>
    <string name="citetxt">Bachelor of Science in Computer Science</string>
    <string name="citeTXT">The Bachelor of Science in Computer Science (BS Computer Science) is a dynamic program providing essential knowledge and skills in areas like algorithms, programming, and artificial intelligence. Through a mix of theory and hands-on projects, students develop problem-solving abilities. Graduates are well-prepared for diverse careers in software development, data science, and cybersecurity, positioning them at the forefront of technological innovation.</string>
    <string name="cahstxt">Bachelor of Science in Medical Laboratory Science</string>
    <string name="cahsTXT">The Bachelor of Science in Medical Laboratory Science is a four-year program that provides knowledge in the fields of Clinical Chemistry, Hematology, Microbiology, Immunohematology, Immunology and Serology, Urinalysis, Clinical Microscopy, Parasitology, Cytology, and Histopathology. During their fourth year, students undergo an internship program in a CHED-accredited training laboratory where they rotate between sections. Graduates of the program must take the board exams conducted by the Professional Regulation Commission to qualify as registered medical technologists.</string>
    <string name="cea_BSA_txt">Bachelor of Science in Architecture</string>
    <string name="bsa_TXT">The Bachelor of Architecture program is a comprehensive and innovative course designed to cultivate the skills, knowledge, and creative vision necessary for a successful career in architecture. Our curriculum seamlessly integrates theoretical principles with hands-on design projects, providing students with a solid foundation in architectural theory, history, and technical expertise. Through studio-based learning and real-world applications, students develop the ability to conceptualize and bring to life architectural designs that are both aesthetically compelling and functionally sound. Graduates of our program are well-prepared to embark on diverse career paths in architecture, urban planning, sustainable design, and other related fields, contributing to the built environment with ingenuity and expertise.</string>
    <string name="cea_BSCE_txt">Bachelor of Science in Civil Engineering</string>
    <string name="ce_TXT">The Bachelor of Science in Civil Engineering program is a four-year course that teaches students the knowledge, skills, and training necessary for designing, constructing and maintaining buildings, and public infrastructure and facilities. We also develop their zest for excellence and lifelong training necessary for adapting to civil engineering trends. Graduates of the BS Civil Engineering program must take the board exams conducted by the Professional Regulation Commission to become professionals.</string>
    <string name="cma_SA_txt">Bachelor of Science in Accountancy</string>
    <string name="SA_TXT">The Bachelor of Science in Accountancy program is a four-year course that prepares students for a professional career in Accountancy, particularly in Public Accounting. The program aims to guide students by providing them technical knowledge, skills and abilities required in the accountancy profession. We also help them develop the values of integrity, independence and skepticism necessary for making professional judgments. Our program uses a competency framework for professional accountants from the International Federation of Accountants, so that graduates may take certifications in Accountancy by the Philippine Professional Regulatory Commission and other international certifying bodies.</string>
    <string name="cma_AT_txt">Bachelor of Science in Accounting Technology</string>
    <string name="AT_THXT">The Bachelor of Science in Accounting Technology program focuses on cultivating the technical expertise, skills, and values essential for a thriving career in accounting management. Our curriculum is meticulously crafted to furnish students with a robust grounding in accounting principles, financial analysis, cost management, and strategic decision-making. Upon completion, our graduates are adeptly equipped</string>
    <string name="cma_TM_txt">Bachelor of Science in Tourism Management</string>
    <string name="TM_TXT">The Bachelor of Science in Tourism Management trains students in a diverse set of skills necessary for their future careers. We use the active learning methodology in honing students’ skills in functional areas like Front Office, Events Planning, Cruise Line Operations, and Travel and Tours. We develop their communication skills so they can properly guide guests through destinations and address their needs and concerns. We also teach our students the values of cultural diversity, sensitivity and versatility needed in touring guests from different cultures. Most importantly, we instill within them the value of our heritage and culture, so that they may best represent the country as our ambassadors. Our program provides students the chance to earn local and international certifications and diplomas (TESDA, American Hospitality and Lodging Education Institute, School D’ Hospitality of Singapore) for prestigious local and global employment opportunities.</string>
    <string name="cma_ENTREP_txt">Bachelor of Science in Entrepreneurship</string>
    <string name="entrep_txt">The Bachelor of Science in Entrepreneurship (BS Entrepreneurship) is a dynamic program that equips students with essential knowledge and skills for success in entrepreneurship. The curriculum integrates theory with hands-on experience, covering business planning, financial management, marketing, and innovation. Through real-world projects, graduates emerge ready to identify opportunities, create sustainable business models, and navigate the challenges of entrepreneurship. The program fosters creativity and resilience, preparing students to excel as business leaders and innovators.</string>
    <string name="hp2">Making Lives Better Through Education</string>
    <string name="about5">PHINMA Education is under the PHINMA Group of Companies, the first Filipino-managed investment firm.</string>
    <string name="about4">For more than a decade, PHINMA built its reputation on transforming existing educational institutions to better serve Filipino students. PHINMA Education begins this process by strategically selecting a school from a key growth area and thoroughly transforming its academics, operations, and student community in order to ensure success for Filipino youth coming from low-income families.</string>
    <string name="the_bachelor_of_science_in_entrepreneurship_bs_entrepreneurship_is_a_dynamic_program_that_equips_students_with_essential_knowledge_and_skills_for_success_in_entrepreneurship_the_curriculum_integrates_theory_with_hands_on_experience_covering_business_planning_financial_management_marketing_and_innovation_through_real_world_projects_graduates_emerge_ready_to_identify_opportunities_create_sustainable_business_models_and_navigate_the_challenges_of_entrepreneurship_the_program_fosters_creativity_and_resilience_preparing_students_to_excel_as_business_leaders_and_innovators">The Bachelor of Science in Entrepreneurship (BS Entrepreneurship) is a dynamic program that equips students with essential knowledge and skills for success in entrepreneurship. The curriculum integrates theory with hands-on experience, covering business planning, financial management, marketing, and innovation. Through real-world projects, graduates emerge ready to identify opportunities, create sustainable business models, and navigate the challenges of entrepreneurship. The program fosters creativity and resilience, preparing students to excel as business leaders and innovators.</string>
    <string name="cpa">
        Congratulations to both Dagupan and Urdaneta Campuses for producing new CPAs from the September 2023 Licensure Examination.\n\n
        Shoutout to John Patrick Fronda for dominating the September 2023 Licensure Examination, landing a Top 3 spot!\n\n
        Urdaneta Campus aced it with a 100% passing rate, while Dagupan Campus achieved an impressive 90.91% passing rate.\n\n
        You made us all proud!
    </string>
    <string name="teacher">
        In honor of Teacher’s Month, our dedicated educator, Ms. Marijel, shares the story behind her choice to become a teacher.\n \n
        From a student with uncertain horizons to a guiding force, she’s on a mission to inspire and shape the future of aspiring professionals.
    </string>
    <string name="lolo">
        PHINMA UPang Campus Life Experience
    </string>
    <string name="sophia">
        In PHINMA UPang’s SHS program, I was glad that I got to meet some friendly and reliable classmates with whom I easily got along. On top of that, all the teachers were diligent and approachable. Whenever we needed help with something, be it school-related or personal, they were always just one chat away.\n\n
        I will always be grateful for my experiences with FlexLearning at PHINMA Upang, for without these, it would be impossible to achieve quality education amidst the pandemic
    </string>
    <string name="rad">
        Para kanino nga ba ang RAD (Remote and Distance Learning) ng PHINMA Education?\n \n
        Ang RAD Learning ay para sa lahat! Kung ikaw ay nagnanais magkolehiyo ngunit kailangan ng flexible schedule, ang RAD ay para sa iyo!\n \n
        – Learn under a schedule that works for you\n
        – Learn from wherever you are\n
        – Complete the requirements of 2-3 subjects within a month\n
        – Learn using printed modules and through group discussions via virtual chats and calls\n
        Enrollment is ongoing! Join our RAD program now!\n
    </string>
    <string name="education">
        How We Make Lives Better Through Education
    </string>
</resources>