<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/SA"
                android:layout_width="220dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:backgroundTint="#E7EFE6"
                android:fontFamily="sans-serif"
                android:padding="6dp"
                android:gravity="center"
                android:text="@string/cma_SA_txt"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/SA_txt"
                android:padding="10dp"
                android:justificationMode="inter_word"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E7EFE6"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/SA_TXT"
                android:textAlignment="center"
                android:textColor="#373333"
                android:layout_marginBottom="50dp"
                android:textSize="19sp"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/AT"
                android:layout_width="220dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:backgroundTint="#E7EFE6"
                android:fontFamily="sans-serif"
                android:padding="6dp"
                android:gravity="center"
                android:text="@string/cma_AT_txt"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/AT_txt"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:backgroundTint="#E7EFE6"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:paddingTop="5dp"
                android:text="@string/AT_THXT"
                android:textAlignment="center"
                android:textColor="#373333"
                android:textSize="19sp"
                android:layout_marginBottom="50dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/TM"
                android:layout_width="220dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:backgroundTint="#E7EFE6"
                android:fontFamily="sans-serif"
                android:padding="6dp"
                android:gravity="center"
                android:text="@string/cma_TM_txt"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tm_txt"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:backgroundTint="#E7EFE6"
                android:fontFamily="sans-serif"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/TM_TXT"
                android:textAlignment="center"
                android:textColor="#373333"
                android:textSize="19sp"
                android:layout_marginBottom="50dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/ENTREP"
                android:layout_width="220dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:backgroundTint="#E7EFE6"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/cma_ENTREP_txt"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:padding="6dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/entrep_txt"
                android:layout_width="match_parent"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:backgroundTint="#E7EFE6"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/the_bachelor_of_science_in_entrepreneurship_bs_entrepreneurship_is_a_dynamic_program_that_equips_students_with_essential_knowledge_and_skills_for_success_in_entrepreneurship_the_curriculum_integrates_theory_with_hands_on_experience_covering_business_planning_financial_management_marketing_and_innovation_through_real_world_projects_graduates_emerge_ready_to_identify_opportunities_create_sustainable_business_models_and_navigate_the_challenges_of_entrepreneurship_the_program_fosters_creativity_and_resilience_preparing_students_to_excel_as_business_leaders_and_innovators"
                android:textAlignment="center"
                android:textColor="#373333"
                android:textSize="18sp"
                android:textStyle="italic" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>