<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/satxt"
                android:layout_width="210dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:backgroundTint="#E7EFE6"
                android:fontFamily="sans-serif"
                android:padding="6dp"
                android:gravity="center"
                android:text="@string/cea_BSA_txt"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/saTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E7EFE6"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:justificationMode="inter_word"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/bsa_TXT"
                android:textAlignment="center"
                android:textColor="#373333"
                android:layout_marginBottom="50dp"
                android:textSize="19sp"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/cetxt"
                android:layout_width="210dp"
                android:padding="6dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:backgroundTint="#E7EFE6"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/cea_BSCE_txt"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ceTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E7EFE6"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:paddingTop="5dp"
                android:text="@string/ce_TXT"
                android:textAlignment="center"
                android:textColor="#373333"
                android:textSize="19sp"
                android:textStyle="italic" />



        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>