<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/ite393_2nd_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Market">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/phinmaedlogo"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:text="News and Updates"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                tools:ignore="HardcodedText" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/cpa"
                tools:ignore="ContentDescription" />

            <TextView
                android:padding="20dp"
                android:text="@string/cpa"
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UnusedAttribute,VisualLintLongText" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/teacher"
                tools:ignore="ContentDescription" />
            <TextView
                android:padding="20dp"
                android:text="@string/teacher"
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UnusedAttribute,VisualLintLongText" />
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <VideoView
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:id="@+id/videoView"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />
            </FrameLayout>
            <TextView
                android:padding="20dp"
                android:text="@string/education"
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UnusedAttribute" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/sophia"
                tools:ignore="ContentDescription,ImageContrastCheck" />
            <TextView
                android:padding="20dp"
                android:text="@string/sophia"
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UnusedAttribute,VisualLintLongText" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/rad"
                tools:ignore="ContentDescription" />
            <TextView
                android:padding="20dp"
                android:text="@string/rad"
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UnusedAttribute,VisualLintLongText" />
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <VideoView
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:id="@+id/videoView2"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />
            </FrameLayout>
            <TextView
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lolo"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>